deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins-statefulset
spec:
  serviceName: "jenkins-headless-service"
  replicas: 2
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins-container
        image: "asia-south1-docker.pkg.dev/poshan-403704/poshan/express-app:tagversion"
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: udp-port
          containerPort: 54321
        securityContext:
          runAsUser: 1000  
          runAsGroup: 1000 
        volumeMounts:
        - name: jenkins-data
          mountPath: /var/jenkins_home
  volumeClaimTemplates:
  - metadata:
      name: jenkins-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "standard"
      resources:
        requests:
          storage: 10Gi
