deployment2.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "sample"
  namespace: "default"
  labels:
    app: "express"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "express"
  template:
    metadata:
      labels:
        app: "express"
    spec:
      containers:
      - name: "express-app-sha256-1"
        image: "asia-south1-docker.pkg.dev/poshan-403704/poshan/express-app:tagversion"
