service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport-service
spec:
  selector:
    app: jenkins
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080  # Specify a node port, or let Kubernetes allocate one
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
      nodePort: 30443  # Specify a node port, or let Kubernetes allocate one
    - name: udp-port
      protocol: UDP
      port: 12345
      targetPort: 54321
      nodePort: 31234  # Specify a node port, or let Kubernetes allocate one
  type: "NodePort"
