service2.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "sample-service"
  namespace: "default"
  labels:
    app: "sample"
spec:
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
  selector:
    app: "express"
  type: "LoadBalancer"
  loadBalancerIP: ""
