ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
    - host: https://jenkins.mohankumar.tech/
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-loadbalancer-service
                port:
                  number: 80
